# tinyrenderer-rust

./: .gitignore  Cargo.toml  build.rs
src/: bresenham1.rs  bresenham2.rs  bresenham4.rs  bresenham5.rs  bresenham6.rs  main.rs  wireframe.rs
tga/: test.cpp  tgaimage.cpp  tgaimage.hpp
